// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
  output   = "../generated/prisma"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  CLIENT
  PROJECT_MANAGER
  DESIGNER
}

enum ProjectStatus {
  DRAFT
  IN_PROGRESS
  REVIEW
  DONE
}

model User {
  id               String   @id @default(cuid())
  email            String   @unique
  name             String?
  role             UserRole @default(CLIENT)
  emailVerified    Boolean  @default(false)
  image            String?
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt
  createdProjects  Project[] @relation("CreatedBy")
  assignedProjects Project[] @relation("AssignedTo")
  sessions         Session[]
  accounts         Account[]
  @@map("User")
}

model Project {
  id          String        @id @default(cuid())
  title       String
  description String?
  status      ProjectStatus @default(DRAFT)
  dueDate     DateTime?
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  // Relations
  createdBy   User   @relation("CreatedBy", fields: [createdById], references: [id])
  createdById String

  assignedTo   User?   @relation("AssignedTo", fields: [assignedToId], references: [id])
  assignedToId String?

  // Files
  files File[]
}

model File {
  id        String   @id @default(cuid())
  filename  String
  path      String
  size      Int
  createdAt DateTime @default(now())

  // Relations
  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  projectId String
}

model Session {
  id        String   @id @default(cuid())
  expiresAt DateTime
  token     String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  @@index([userId])
  @@map("Session")
}

model Account {
  id                    String    @id @default(cuid())
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt
  @@index([userId])
  @@map("Account")
}

model Verification {
  id         String   @id @default(cuid())
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  @@index([identifier])
  @@map("Verification")
}
