//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  name String
  role UserRole [not null, default: 'CLIENT']
  emailVerified Boolean [not null, default: false]
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdProjects Project [not null]
  assignedProjects Project [not null]
  sessions Session [not null]
  accounts Account [not null]
}

Table Project {
  id String [pk]
  title String [not null]
  description String
  status ProjectStatus [not null, default: 'DRAFT']
  dueDate DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdBy User [not null]
  createdById String [not null]
  assignedTo User
  assignedToId String
  files File [not null]
}

Table File {
  id String [pk]
  filename String [not null]
  path String [not null]
  size Int [not null]
  createdAt DateTime [default: `now()`, not null]
  project Project [not null]
  projectId String [not null]
}

Table Session {
  id String [pk]
  expiresAt DateTime [not null]
  token String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ipAddress String
  userAgent String
  userId String [not null]
  user User [not null]
}

Table Account {
  id String [pk]
  accountId String [not null]
  providerId String [not null]
  userId String [not null]
  user User [not null]
  accessToken String
  refreshToken String
  idToken String
  accessTokenExpiresAt DateTime
  refreshTokenExpiresAt DateTime
  scope String
  password String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Verification {
  id String [pk]
  identifier String [not null]
  value String [not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum UserRole {
  CLIENT
  PROJECT_MANAGER
  DESIGNER
}

Enum ProjectStatus {
  DRAFT
  IN_PROGRESS
  REVIEW
  DONE
}

Ref: Project.createdById > User.id

Ref: Project.assignedToId > User.id

Ref: File.projectId > Project.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Account.userId > User.id [delete: Cascade]